--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Web Programming
 ---
 <div class="blurb">
-<h1>Hello Sweet World</h1>
-<p>Once upon a time, ..</p>
+<h1>If your are reading this, you rule!</h1>
+  <p><i>this sentance is in italics</i></p>
 </div>
