--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Web Programming
 ---
 <div class="blurb">
-<h1>If your are reading this, you rule!</h1>
+<h1>If you are reading this, you rule!</h1>
   <p><i>this sentance is in italics</i></p>
 </div>
+<div class =
