--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,12 @@ layout: aboutpage
 title: Web Programming
 ---
 <div class="blurb">
-<h1>This is the about page</h1>
+<h1>This is the About Page</h1>
   <p>
     <strong>
-      It will tell you about things
-    </strong>
-      only about this webpage though.. not the meaning of life.
+      This website is a demo of github pages, made by James Walton.
+      <br>
+      It is a piece of coursework for the class: Web Programming.
+    </strong>   
    </p>
 </div>
