--- a/about/index.html
+++ b/about/index.html
@@ -11,4 +11,5 @@ title: Web Programming
       It is a piece of coursework for the class: Web Programming.
     </strong>   
    </p>
+  <img>https://www.askideas.com/media/08/Rabbit-Operating-Laptop-Funny-Picture.jpg</img>
 </div>
