--- a/about/index.html
+++ b/about/index.html
@@ -11,5 +11,5 @@ title: Web Programming
       It is a piece of coursework for the class: Web Programming.
     </strong>   
    </p>
-  <img>Rabbit-Operating-Laptop-Funny-Picture.jpg</img>
+  <img src="Rabbit-Operating-Laptop-Funny-Picture.jpg">
 </div>
