--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 layout: aboutpage
 title: Web Programming
 ---
+<body>
 <div class="blurb">
 <h1>This is the About Page</h1>
   <p>
@@ -13,3 +14,4 @@ title: Web Programming
    </p>
   <img src="Rabbit-Operating-Laptop-Funny-Picture.jpg">
 </div>
+</body>
